--- a/examples/torchtitan/configs/llama3.1_8B-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_8B-pretrain.yaml
@@ -15,8 +15,13 @@ modules:
       file_sink_level: DEBUG
       stderr_sink_level: INFO
 
-      # model:
-      #   converters: ["mx"]
+      training:
+        batch_size: 4
+        compile: true
+
+      activation_checkpoint:
+        mode: "none"
+
       primus_turbo:
         enable_primus_turbo: false
         enable_attention_float8: false
