perf(torchtitan/config): enable compile for Llama-3.1 (8B/70B/405B); set act_ckpt=none for 8B; add primus_turbo flags to 70B/405B

--- a/examples/torchtitan/configs/llama3.1_70B-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_70B-pretrain.yaml
@@ -17,6 +17,7 @@ modules:
 
       training:
         batch_size: 8
+        compile: true
 
       optimizer:
         lr: 1.5e-4
@@ -26,3 +27,7 @@ modules:
 
       activation_checkpoint:
         mode: full
+
+      primus_turbo:
+        enable_primus_turbo: false
+        enable_attention_float8: false
