--- a/examples/torchtitan/configs/llama3.1_405B-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_405B-pretrain.yaml
@@ -17,6 +17,7 @@ modules:
 
       training:
         batch_size: 2
+        compile: true
 
       optimizer:
         lr: 8e-5
@@ -26,3 +27,7 @@ modules:
 
       activation_checkpoint:
         mode: full
+
+      primus_turbo:
+        enable_primus_turbo: false
+        enable_attention_float8: false
