add wandb logging config for torchtitan

--- a/examples/torchtitan/configs/llama3.1_8B-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_8B-pretrain.yaml
@@ -15,6 +15,10 @@ modules:
       file_sink_level: DEBUG
       stderr_sink_level: INFO
 
+      metrics:
+        # enable_wandb: true
+        enable_wandb: false
+
       # model:
       #   converters: ["mx"]
       primus_turbo:
