feat: align primus-turbo fp8 linear's args to megatron

--- a/primus/configs/modules/megatron/trainer_base.yaml
+++ b/primus/configs/modules/megatron/trainer_base.yaml
@@ -57,6 +57,10 @@ fp8_param_gather: false
 te_rng_tracker: false
 inference_rng_tracker: false
 
+first_last_layers_bf16: false
+num_layers_at_start_in_bf16: 0
+num_layers_at_end_in_bf16: 1
+
 # Optimizer
 optimizer: adam
 lr: 2.5e-4
