--- a/examples/torchtitan/configs/llama3.1_70B-BF16-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_70B-BF16-pretrain.yaml
@@ -34,5 +34,5 @@ modules:
         mode: full
 
       primus_turbo:
-        enable_primus_turbo : true
+        enable_primus_turbo : false
         enable_attention_float8 : false
