--- a/examples/torchtitan/configs/llama3.1_70B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_70B-FP8-pretrain.yaml
@@ -39,5 +39,5 @@ modules:
         filter_fqns: ["output"]
 
       primus_turbo:
-        enable_primus_turbo : true
+        enable_primus_turbo : false
         enable_attention_float8 : false
