--- a/examples/torchtitan/configs/llama3.1_8B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_8B-FP8-pretrain.yaml
@@ -38,5 +38,5 @@ modules:
 
         
       primus_turbo:
-        enable_primus_turbo: true
+        enable_primus_turbo: false
         enable_attention_float8: false
