--- a/examples/torchtitan/configs/llama3.1_8B-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_8B-pretrain.yaml
@@ -10,13 +10,20 @@ modules:
 
     # model to run
     model: llama3.1_8B.yaml
+
     overrides:
       sink_level: null
       file_sink_level: DEBUG
       stderr_sink_level: INFO
 
-      # model:
-      #   converters: ["mx"]
+      training:
+        seq_len: 8192
+        # global_batch_size: 128
+        local_batch_size: 4
+
+      compile:
+        enable: true
+
       primus_turbo:
-        enable_primus_turbo: false
+        enable_primus_turbo: true
         enable_attention_float8: false
