--- a/primus/configs/models/torchtitan/llama3.1_70B.yaml
+++ b/primus/configs/models/torchtitan/llama3.1_70B.yaml
@@ -5,5 +5,5 @@ job:
 model:
   name: "llama3"
   flavor: "70B"
-  tokenizer_path: "meta-llama/Llama-3.1-8B"
+  hf_assets_path: "meta-llama/Llama-3.1-8B"
   # converters = ["float8"]
