--- a/primus/configs/modules/torchtitan/pre_trainer.yaml
+++ b/primus/configs/modules/torchtitan/pre_trainer.yaml
@@ -59,3 +59,6 @@ experimental:
 primus_turbo:
   enable_primus_turbo : true
   enable_attention_float8 : false
+  use_turbo_attention: true
+  use_turbo_async_tp: true
+  use_turbo_mx_linear: true
