--- a/primus/configs/modules/megatron/primus_turbo.yaml
+++ b/primus/configs/modules/megatron/primus_turbo.yaml
@@ -5,9 +5,19 @@ enable_primus_turbo: false
 use_turbo_attention: false
 use_turbo_parallel_linear: false
 use_turbo_grouped_mlp: false
+use_turbo_groupmlp_act: false
 moe_use_fused_router_with_aux_score: false
 
 
 
 # inner features flags
 enable_turbo_attention_float8 : false
+
+
+# deepep
+use_turbo_deepep: false
+turbo_deepep_num_cu: 32
+turbo_deepep_use_comm_stream: false
+
+# sync-free moe
+turbo_sync_free_moe_stage: 0
