--- a/primus/configs/modules/megatron/zero_bubble.yaml
+++ b/primus/configs/modules/megatron/zero_bubble.yaml
@@ -1,5 +1,6 @@
 patch_zero_bubble: false
-
+# print zero bubble scheduler table
+debug_scheduler_table: false
 # Use an unified runtime supporting zero_bubble and other schedules.
 enable_zb_runtime: true
 # By default zb runtime dispatches a tiny communication before the real communication to optimize computation
