--- a/examples/megatron/configs/moe_proxy-pretrain.yaml
+++ b/examples/megatron/configs/moe_proxy-pretrain.yaml
@@ -21,6 +21,14 @@ modules:
       log_avg_reset_interval: 50
 
       optimizer: sgd
+      recompute_granularity: full # full, selective
+      recompute_method: block # uniform, block
+      recompute_num_layers: 8 # int
+
+      # profile: true
+      # use_pytorch_profiler: true
+      # profile_step_end: 7
+      # profile_step_start: 6
 
       # hyber parameters
       train_iters: 10
