--- a/examples/torchtitan/configs/llama3.1_8B-BF16-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_8B-BF16-pretrain.yaml
@@ -33,5 +33,5 @@ modules:
         selective_ac_option: "op"  # "int" = ac every positive int layer or 'op', ac based on ops policy
 
       primus_turbo:
-        enable_primus_turbo: true
+        enable_primus_turbo: false
         enable_attention_float8: false
