update common perf arguments - ce fusion - moe gemms

--- a/examples/megatron/configs/llama2_7B-pretrain.yaml
+++ b/examples/megatron/configs/llama2_7B-pretrain.yaml
@@ -78,3 +78,7 @@ modules:
       # overlap_param_gather: false
       # ckpt_format: torch
       # sequence_parallel: 1
+
+      # Cross entropy flags
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
