--- a/examples/megatron/configs/mixtral_8x7B_v0.1-pretrain.yaml
+++ b/examples/megatron/configs/mixtral_8x7B_v0.1-pretrain.yaml
@@ -54,7 +54,7 @@ modules:
       # fusion
       moe_permute_fusion: false
       gradient_accumulation_fusion: false
-      moe_use_legacy_grouped_gemm: true
+      moe_use_legacy_grouped_gemm: false
 
       # ckpt
       finetune: false
@@ -68,3 +68,7 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
+
+      # Cross entropy flags
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
