update AINIC and MI355 training example

--- a/examples/megatron/configs/grok1-pretrain.yaml
+++ b/examples/megatron/configs/grok1-pretrain.yaml
@@ -73,3 +73,6 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
+
+      cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: te
