--- a/primus/configs/models/megatron/grok1.yaml
+++ b/primus/configs/models/megatron/grok1.yaml
@@ -14,4 +14,4 @@ rotary_base: 1000000
 masked_softmax_fusion: false
 
 tokenizer_type: MixtralTokenizer
-tokenizer_model: xai-org/grok-1
+tokenizer_model: mistralai/Mixtral-8x22B-v0.1
