--- a/examples/megatron/configs/grok1-pretrain.yaml
+++ b/examples/megatron/configs/grok1-pretrain.yaml
@@ -76,3 +76,8 @@ modules:
 
       cross_entropy_loss_fusion: true
       cross_entropy_fusion_impl: te
+
+      # Turbo
+      enable_primus_turbo: true
+      use_turbo_attention: true
+      use_turbo_grouped_mlp: true
