--- a/tests/trainer/test_megatron_trainer.yaml
+++ b/tests/trainer/test_megatron_trainer.yaml
@@ -16,7 +16,7 @@ modules:
 
       # debug
       num_layers: ${PRIMUS_NUM_LAYERS:4}
-      moe_layer_freq: ${PRIMUS_MOE_LAYER_FREQ:"[0]*1+[1]*3"}
+      moe_layer_freq: ${PRIMUS_MOE_LAYER_FREQ:[0]*1+[1]*3}
 
       # optimizer: adam
       moe_router_force_load_balancing: true
@@ -28,8 +28,8 @@ modules:
       train_iters: 3
       micro_batch_size: 1
       global_batch_size: ${PRIMUS_GLOBAL_BATCH_SIZE:8}
-      seq_length: 4096
-      max_position_embeddings: 4096
+      seq_length: ${PRIMUS_SEQ_LENGTH:4096}
+      max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
       lr: 1.0e-5
       min_lr: 0.0
       lr_warmup_iters: 2
@@ -77,3 +77,11 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
+
+
+      enable_primus_turbo: false
+      use_turbo_attention: false
+
+      bias_swiglu_fusion: false
+      bias_dropout_fusion: false
+      masked_softmax_fusion: false
