--- a/examples/torchtitan/configs/llama3.1_405B-BF16-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_405B-BF16-pretrain.yaml
@@ -34,4 +34,5 @@ modules:
 
       primus_turbo:
         enable_primus_turbo: false
+        use_turbo_attention: true
         enable_attention_float8: false
