--- a/examples/torchtitan/configs/llama3.1_405B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_405B-FP8-pretrain.yaml
@@ -16,10 +16,13 @@ modules:
       stderr_sink_level: INFO
 
       training:
-        batch_size: 1
+        batch_size: 2
         compile: true
-        steps: 10
+        steps: 30
       
+      # profiling:
+      #   profile_freq: 6
+
       metrics:
         log_freq: 1
 
@@ -30,9 +33,16 @@ modules:
         tensor_parallel_degree: 1
 
       activation_checkpoint:
-        mode: full
+        mode: selective
+        selective_ac_option: -16 
 
       primus_turbo:
         enable_primus_turbo: true
         use_turbo_attention: true
         enable_attention_float8: false
+
+      float8:
+        enable_fsdp_float8_all_gather: true
+        precompute_float8_dynamic_scale_for_fsdp: true
+        force_recompute_fp8_weight_in_bwd: true
+        filter_fqns: ["output"]
