--- a/examples/torchtitan/configs/llama3.1_70B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_70B-FP8-pretrain.yaml
@@ -23,9 +23,9 @@ modules:
         log_freq: 1
 
       training:
-        batch_size: 3
+        batch_size: 10
         compile: true
-        steps: 50
+        steps: 10
 
       optimizer:
         lr: 1.5e-4
@@ -40,4 +40,5 @@ modules:
 
       primus_turbo:
         enable_primus_turbo : true
+        use_turbo_attention: true
         enable_attention_float8 : false
