--- a/primus/configs/models/megatron/grok1.yaml
+++ b/primus/configs/models/megatron/grok1.yaml
@@ -5,7 +5,7 @@ bases:
 max_position_embeddings: 131072
 num_layers: 64
 hidden_size: 6144
-ffn_hidden_size: 32768
+moe_ffn_hidden_size: 32768
 
 num_attention_heads: 48
 init_method_std: 0.01
