--- a/examples/megatron/configs/llama4_17B16E-pretrain.yaml
+++ b/examples/megatron/configs/llama4_17B16E-pretrain.yaml
@@ -1,6 +1,6 @@
-work_group: ${TEAM:amd}
-user_name: ${USER:root}
-exp_name: ${EXP_NAME:llama4_17B16E-pretrain}
+work_group: ${PRIMUS_TEAM:amd}
+user_name: ${PRIMUS_USER:root}
+exp_name: ${PRIMUS_EXP_NAME:llama4_17B16E-pretrain}
 workspace: ./output
 
 modules:
