--- a/examples/torchtitan/configs/llama3.1_70B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_70B-FP8-pretrain.yaml
@@ -1,6 +1,6 @@
-work_group: ${TEAM:amd}
-user_name: ${USER:root}
-exp_name: ${EXP_NAME:llama3_70B-pretrain}
+work_group: ${PRIMUS_TEAM:amd}
+user_name: ${PRIMUS_USER:root}
+exp_name: ${PRIMUS_EXP_NAME:llama3_70B-pretrain}
 workspace: ./output
 
 modules:
