--- a/tests/trainer/test_megatron_trainer.yaml
+++ b/tests/trainer/test_megatron_trainer.yaml
@@ -20,8 +20,7 @@ modules:
 
       # optimizer: adam
       moe_router_force_load_balancing: true
-      # should be fp32 when using Primus Turbo DeepEP
-      moe_router_dtype: ${PRIMUS_MOE_ROUTER_DTYPE:null}
+      moe_router_dtype: null
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 5
 
@@ -78,13 +77,3 @@ modules:
       no_save_rng: null
       disable_last_saving: true
       ckpt_format: torch
-
-
-      # should be false when using Primus Turbo DeepEP
-      moe_shared_expert_overlap: false
-
-      # primus turbo
-      enable_primus_turbo: ${PRIMUS_ENABLE_TURBO:0}
-
-      use_turbo_deepep: ${PRIMUS_TURBO_DEEPEP:0}
-      turbo_sync_free_moe_stage: ${PRIMUS_TURBO_SYNC_FREE_MOE_STAGE:0}
