--- a/examples/megatron/configs/moe_proxy-pretrain.yaml
+++ b/examples/megatron/configs/moe_proxy-pretrain.yaml
@@ -20,7 +20,7 @@ modules:
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
 
-      optimizer: sgd
+      optimizer: adam
       recompute_granularity: full # full, selective
       recompute_method: block # uniform, block
       recompute_num_layers: 8 # int
