--- a/examples/megatron/configs/grok1-pretrain.yaml
+++ b/examples/megatron/configs/grok1-pretrain.yaml
@@ -78,7 +78,7 @@ modules:
       cross_entropy_loss_fusion: true
       cross_entropy_fusion_impl: te
 
-      # # Turbo
+      ################################################# Turbo ZeroBubble (WIP)
       # enable_primus_turbo: true
       # use_turbo_attention: false
       # use_turbo_grouped_mlp: false
@@ -94,8 +94,6 @@ modules:
       
       # overlap_grad_reduce: false
       # overlap_param_gather: false
- 
-      # dump_pp_data: true
  
       # patch_zero_bubble: true
       # # num_virtual_stages_per_pipeline_rank: 2
