--- a/examples/megatron/configs/moe_proxy-pretrain.yaml
+++ b/examples/megatron/configs/moe_proxy-pretrain.yaml
@@ -53,7 +53,7 @@ modules:
       pipeline_model_parallel_size: ${PRIMUS_PP:1}
       expert_model_parallel_size: ${PRIMUS_EP:8}
       overlap_grad_reduce: true
-      overlap_param_gather: true
+      overlap_param_gather: false
 
       # data
       mock_data: true
