--- a/primus/configs/models/megatron/moe_proxy.yaml
+++ b/primus/configs/models/megatron/moe_proxy.yaml
@@ -14,10 +14,11 @@ ffn_hidden_size: 10944 # not used in moe layer
 num_attention_heads: 64
 group_query_attention: true
 num_query_groups: 8
-kv_channels: 64
+kv_channels: 128
 
 # moe
 moe_layer_freq: 1
+moe_router_topk: 16
 num_experts: 1024
 # num_shared_experts: 1
 moe_ffn_hidden_size: 256
