--- a/examples/torchtitan/configs/llama3.1_405B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_405B-FP8-pretrain.yaml
@@ -40,6 +40,7 @@ modules:
         enable_primus_turbo: true
         use_turbo_attention: true
         enable_attention_float8: false
+        use_turbo_fp8_gemm: false
 
       float8:
         enable_fsdp_float8_all_gather: true
