--- a/examples/torchtitan/configs/llama3.1_70B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_70B-FP8-pretrain.yaml
@@ -23,7 +23,7 @@ modules:
         log_freq: 1
 
       training:
-        batch_size: 10
+        batch_size: 6
         compile: true
         steps: 10
 
@@ -42,3 +42,4 @@ modules:
         enable_primus_turbo : true
         use_turbo_attention: true
         enable_attention_float8 : false
+        use_turbo_fp8_gemm: true
