--- a/examples/torchtitan/configs/llama3.1_8B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_8B-FP8-pretrain.yaml
@@ -39,3 +39,4 @@ modules:
       primus_turbo:
         enable_primus_turbo: true
         enable_attention_float8: false
+        use_turbo_fp8_gemm: true
