--- a/examples/megatron/exp_pretrain.yaml
+++ b/examples/megatron/exp_pretrain.yaml
@@ -1,6 +1,6 @@
-work_group: ${TEAM:amd}
-user_name: ${USER:root}
-exp_name: &exp_name ${EXP_NAME:exp_pretrain}
+work_group: ${PRIMUS_TEAM:amd}
+user_name: ${PRIMUS_USER:root}
+exp_name: &exp_name ${PRIMUS_EXP_NAME:exp_pretrain}
 workspace: ./output
 
 modules:
@@ -63,7 +63,7 @@ modules:
       overlap_param_gather: true
 
       # data
-      train_data_path: ${TOKENIZED_DATA_PATH:null}
+      train_data_path: ${PRIMUS_TOKENIZED_DATA_PATH:null}
       valid_data_path: null
       test_data_path: null
 
