--- a/tests/trainer/test_megatron_trainer_deterministic.yaml
+++ b/tests/trainer/test_megatron_trainer_deterministic.yaml
@@ -1,5 +1,5 @@
-work_group: ${TEAM:amd}
-user_name: ${USER:root}
+work_group: ${PRIMUS_TEAM:amd}
+user_name: ${PRIMUS_USER:root}
 exp_name: &exp_name ${EXP:exp-deepseek-pretrain}
 workspace: ./output
 
@@ -52,7 +52,7 @@ modules:
 
       # data
       num_workers: 1
-      train_data_path: ${TOKENIZED_DATA_PATH:null}
+      train_data_path: ${PRIMUS_TOKENIZED_DATA_PATH:null}
       valid_data_path: null
       test_data_path: null
 
