--- a/examples/megatron/configs/llama4_17B16E-pretrain.yaml
+++ b/examples/megatron/configs/llama4_17B16E-pretrain.yaml
@@ -1,6 +1,6 @@
-work_group: ${TEAM:amd}
-user_name: ${USER:root}
-exp_name: ${EXP_NAME:llama4_17B16E-pretrain}
+work_group: ${PRIMUS_TEAM:amd}
+user_name: ${PRIMUS_USER:root}
+exp_name: ${PRIMUS_EXP_NAME:llama4_17B16E-pretrain}
 workspace: ./output
 
 modules:
@@ -47,20 +47,20 @@ modules:
 
       # data
       mock_data: true
-      train_data_path: ${TOKENIZED_DATA_PATH:null}
+      train_data_path: ${PRIMUS_TOKENIZED_DATA_PATH:null}
       valid_data_path: null
       test_data_path: null
 
       # fusion
       # 20250321: need latest megatron docker image
-      moe_permute_fusion: false 
+      moe_permute_fusion: false
       # fused wgrad gemm and accumulation
       gradient_accumulation_fusion: false
       # recommend set `false` in fp8
       moe_use_legacy_grouped_gemm: false
       # fused topk router with aux score
       moe_use_fused_router_with_aux_score: false
-    
+
 
       # ckpt
       finetune: false
@@ -89,4 +89,3 @@ modules:
       # recompute_granularity: full # full, selective
       # recompute_method: block # uniform, block
       # recompute_num_layers: 48 # int
-
