--- a/primus/configs/modules/torchtitan/pre_trainer.yaml
+++ b/primus/configs/modules/torchtitan/pre_trainer.yaml
@@ -1,62 +1,152 @@
 includes:
   - ../module_base.yaml
 
-profiling:
-  enable_profiling: true
-  save_traces_folder: "profile_trace"
-  profile_freq: 100
-
-metrics:
-  log_freq: 10
-  enable_tensorboard: true
-  save_tb_folder: "tb"
-  enable_wandb: false
-
-optimizer:
-  name: "AdamW"
-  lr: 3e-4
-  eps: 1e-8
-
 lr_scheduler:
-  # lr scheduler warm up
+  decay_ratio: null
+  decay_type: linear
+  min_lr_factor: 0.0
   warmup_steps: 200
 
+metrics:
+  disable_color_printing: false
+  enable_tensorboard: false
+  enable_wandb: false
+  log_freq: 10
+  save_for_all_ranks: false
+  save_tb_folder: tb
+
+optimizer:
+  beta1: 0.9
+  beta2: 0.95
+  early_step_in_backward: false
+  eps: 1.0e-08
+  implementation: fused
+  lr: 0.0008
+  name: AdamW
+  weight_decay: 0.1
+
+profiling:
+  enable_memory_snapshot: false
+  enable_profiling: false
+  profile_freq: 10
+  save_memory_snapshot_folder: memory_snapshot
+  save_traces_folder: profile_traces
+
 training:
-  batch_size: 1
-  seq_len: 8192
+  dataset: c4
+  dataset_path: null
+  deterministic: false
+  enable_cpu_offload: false
+  gc_debug: false
+  gc_freq: 50
+  global_batch_size: -1
+  local_batch_size: 8
   max_norm: 1.0
-  steps: 1000
-  compile: false
-  dataset: "c4"
+  mixed_precision_param: bfloat16
+  mixed_precision_reduce: float32
+  seed: null
+  seq_len: 2048
+  steps: 10000
+
 
 parallelism:
+  context_parallel_degree: 1
+  context_parallel_rotate_method: allgather
   data_parallel_replicate_degree: 1
   data_parallel_shard_degree: -1
-  tensor_parallel_degree: 1
-  pipeline_parallel_degree: 1
-  context_parallel_degree: 1
+  disable_loss_parallel: false
   enable_async_tensor_parallel: false
+  enable_compiled_autograd: false
+  expert_parallel_degree: 1
+  expert_tensor_parallel_degree: 1
+  fsdp_reshard_after_forward: default
+  module_fqns_per_model_part: null
+  pipeline_parallel_degree: 1
+  pipeline_parallel_first_stage_less_layers: 1
+  pipeline_parallel_last_stage_less_layers: 1
+  pipeline_parallel_layers_per_stage: null
+  pipeline_parallel_microbatch_size: 1
+  pipeline_parallel_schedule: 1F1B
+  pipeline_parallel_schedule_csv: ''
+  pipeline_parallel_split_points: []
+  tensor_parallel_degree: 1
 
 checkpoint:
-  enable_checkpoint: false
-  folder: "checkpoint"
+  enable: false
+  folder: checkpoint
   interval: 500
-  model_weights_only: false
-  export_dtype: "float32"
-  async_mode: "disabled" # ["disabled", "async", "async_with_pinned_mem"]
+  initial_load_path: null
+  initial_load_model_only: true
+  initial_load_in_hf: false
+  last_save_model_only: true
+  last_save_in_hf: false
+  export_dtype: float32
+  async_mode: disabled
+  keep_latest_k: 10
+  load_step: -1
+  exclude_from_loading: []
+  enable_first_step_checkpoint: false
+  create_seed_checkpoint: false
 
 activation_checkpoint:
-  mode: "selective" # ["none", "selective", "full"]
-  selective_ac_option: "op"  # "int" = ac every positive int layer or 'op', ac based on ops policy
+  mode: none
+  selective_ac_option: "2"
+  per_op_sac_force_recompute_mm_shapes_by_fqns:
+    - moe.router.gate
+  early_stop: false
+
+compile:
+  enable: true
+  components:
+    - model
+    - loss
 
 float8:
   enable_fsdp_float8_all_gather: false
   precompute_float8_dynamic_scale_for_fsdp: false
-  force_recompute_fp8_weight_in_bwd: false
-  filter_fqns: ["output"]
+  recipe_name: null
+  filter_fqns: []
+  emulate: false
+  moe_fqns_prototype: []
+
+mx:
+  mxfp8_dim1_cast_kernel_choice: triton
+  recipe_name: mxfp8_cublas
+  filter_fqns:
+    - output
+  moe_fqns_prototype: []
+
+comm:
+  init_timeout_seconds: 300
+  train_timeout_seconds: 100
+  trace_buf_size: 20000
+  save_traces_folder: comm_traces
+
+memory_estimation:
+  enable: false
+  disable_fake_mode: false
+
+fault_tolerance:
+  enable: false
+  process_group: gloo
+  process_group_timeout_ms: 10000
+  replica_id: 0
+  group_size: 0
+  min_replica_size: 1
+  semi_sync_method: null
 
 experimental:
+  custom_import: ""
   custom_args_module : "primus.backends.torchtitan.primus_turbo_extensions.config_extension"
+
+validation:
+  enable: false
+  dataset: c4_validation
+  dataset_path: null
+  local_batch_size: 8
+  seq_len: 2048
+  freq: 10
+  steps: -1
 
 primus_turbo:
   enable_primus_turbo : true
