--- a/examples/megatron/configs/MI300X/deepseek_v2_lite-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v2_lite-pretrain.yaml
@@ -85,7 +85,7 @@ modules:
       use_turbo_grouped_mlp: true
 
       # deepep
-      use_turbo_deepep: true
+      use_turbo_deepep: false
 
       # 64 or 80 for ep8, 32 for ep16-64 is best practice
       turbo_deepep_num_cu: 32
@@ -98,16 +98,3 @@ modules:
       # Cross entropy flags
       cross_entropy_fusion_impl: "te"
       cross_entropy_loss_fusion: true
-      # turbo_sync_free_moe_stage: 2
-
-      moe_layer_freq: 1
-      moe_shared_expert_overlap: false
-      moe_router_dtype: fp32
-
-
-
-      # profile
-      profile: true
-      use_pytorch_profiler: true
-      profile_step_end: 7
-      profile_step_start: 6
