--- a/primus/configs/models/megatron/llama3_8B.yaml
+++ b/primus/configs/models/megatron/llama3_8B.yaml
@@ -2,7 +2,7 @@ bases:
   - llama3_base.yaml
 
 tokenizer_type: Llama3Tokenizer
-tokenizer_model: meta-llama/Llama-3.1-8B
+tokenizer_model: meta-llama/Meta-Llama-3-8B
 
 
 ffn_hidden_size: 14336
