--- a/examples/torchtitan/configs/llama3.1_405B-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_405B-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${PRIMUS_TEAM:amd}
 user_name: ${PRIMUS_USER:root}
-exp_name: ${PRIMUS_EXP_NAME:llama3_405B-pretrain}
+exp_name: ${PRIMUS_EXP_NAME:llama3.1_405B-pretrain}
 workspace: ./output
 
 modules:
@@ -16,8 +16,8 @@ modules:
       stderr_sink_level: INFO
 
       training:
-        batch_size: 2
-        compile: true
+        local_batch_size: 2
+
 
       optimizer:
         lr: 8e-5
