--- a/primus/configs/models/torchtitan/llama3_70B-fp8.yaml
+++ b/primus/configs/models/torchtitan/llama3_70B-fp8.yaml
@@ -1,9 +1,9 @@
 job:
   dump_folder: "./outputs"
-  description: "Llama 3.1 70B training"
+  description: "Llama 3 70B training"
 
 model:
   name: "llama3"
   flavor: "70B"
-  hf_assets_path: "meta-llama/Llama-3.1-70B"
+  hf_assets_path: "meta-llama/Meta-Llama-3-70B"
   converters: ["float8"]
