fix(config): update TorchTitan fp8 configs for new converter schema

--- a/examples/torchtitan/configs/llama3.1_405B-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_405B-pretrain.yaml
@@ -16,11 +16,10 @@ modules:
       stderr_sink_level: INFO
 
       training:
-        batch_size: 2
-        compile: true
+        local_batch_size: 2
 
       optimizer:
-        lr: 8e-5
+        lr: 8.0e-5
 
       parallelism:
         tensor_parallel_degree: 8
