--- a/examples/torchtitan/configs/llama3.1_70B-BF16-pretrain.yaml
+++ b/examples/torchtitan/configs/llama3.1_70B-BF16-pretrain.yaml
@@ -23,8 +23,7 @@ modules:
         log_freq: 10
 
       training:
-        batch_size: 4
-        compile: true
+        local_batch_size: 4
         steps: 50
 
       optimizer:
