Support Megatron's a2a and deepep overlap in pipeline (#244)

--- a/primus/configs/modules/megatron/trainer_base.yaml
+++ b/primus/configs/modules/megatron/trainer_base.yaml
@@ -184,6 +184,7 @@ replication_jump: null # int
 replication_factor: null # int
 deterministic_mode: false
 check_weight_hash_across_dp_replicas_interval: null
+overlap_moe_expert_parallel_comm: false
 
 train_iters: null
 eval_iters: 32
