feat(deepep): support fully syncfree moe stage3. (#232)
Co-authored-by: Xiaoming-AMD <Xiaoming.Peng@amd.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,7 +60,7 @@ jobs:
           repository: AMD-AIG-AIMA/Primus-Turbo
           submodules: "recursive"
           path: Primus-Turbo
-          ref: 12308d7dc670914c15d8e8199fb9ff08f356df06 # feat(token_dispatcher): add DeepEPTokenDispatcher for MoE. (#114)
+          ref: a97e986f01893fec5789243400c7046d18591ba9 # chore: update aiter to fix pybind11 issue (#132)
       - run: echo "Begin Primus-Turbo Install."
       - name: Install Primus-Turbo
         run: |
