feat(torchtitan): support enabling/disabling embedding AMP patch via config

--- a/primus/configs/modules/torchtitan/pre_trainer.yaml
+++ b/primus/configs/modules/torchtitan/pre_trainer.yaml
@@ -154,3 +154,4 @@ primus_turbo:
   use_turbo_attention: true
   use_turbo_async_tp: true
   use_turbo_mx_linear: true
+  enable_embedding_autocast: true
